# ros2-pinocchio

./: CMakeLists.txt  README.md  package.xml  ros_humble_install.sh
scripts/: py_publisher.py  py_subscriber.py
src/: cpp_publisher.cpp  cpp_subscriber.cpp  pinocchio_model.cpp
sthira/: CMakeLists.txt
sthira/include/: sthira.h
sthira/src/: sthira.cpp
